--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -1,1 +1,5 @@
-<p>login-page works!</p>
+<div class="container-div">
+    <div class="logo-div">
+        <img src="" alt="" class="logo-img">
+    </div>
+</div>
