add the constant tags in the page

--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -1,5 +1,5 @@
 <div class="container-div">
     <div class="logo-div">
-        <img src="" alt="" class="logo-img">
+        <img src="assets/images/logo.svg" alt="logo" class="logo-img">
     </div>
 </div>
