--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -2,4 +2,5 @@
     <div class="logo-div">
         <img src="assets/images/logo.svg" alt="logo" class="logo-img">
     </div>
+    <login></login>
 </div>
