add routerlink to html and ts

--- a/src/pages/auth-page/login/login.html
+++ b/src/pages/auth-page/login/login.html
@@ -9,12 +9,12 @@
         <div class="input-div">
             <label for="password">Password</label>
             <input type="text" name="password" id="password">
-            <a href="" class="forgot-password-anchor">Forgot</a>
+            <a routerLink="/auth/forgot" class="forgot-password-anchor">Forgot</a>
         </div>
         <input type="submit" value="Login" class="btn login-btn">
     </form>
     <p class="signup-paragraph">
         No account yet?
-        <a href="" class="signup-anchor">Sign up</a>
+        <a routerLink="/auth/signup" class="signup-anchor">Sign up</a>
     </p>
 </div>
