add routerlink to html and ts

--- a/src/pages/auth-page/signup/signup.html
+++ b/src/pages/auth-page/signup/signup.html
@@ -12,4 +12,8 @@
         </div>
         <input type="submit" value="Sign up" class="btn signup-btn">
     </form>
+    <p class="login-paragraph">
+        Already have an account?
+        <a routerLink="/auth/login" class="login-anchor">Log in</a>
+    </p>
 </div>
