add router outlet

--- a/src/pages/auth-page/auth-page.html
+++ b/src/pages/auth-page/auth-page.html
@@ -2,5 +2,5 @@
     <div class="logo-div">
         <img src="assets/images/logo.svg" alt="logo" class="logo-img">
     </div>
-    <reset-password></reset-password>
+    <router-outlet></router-outlet>
 </div>
