add html tags for header

--- a/src/pages/home/header/header.html
+++ b/src/pages/home/header/header.html
@@ -1,1 +1,30 @@
-<p>header works!</p>
+<div class="header-div">
+    <div class="logo-div">
+        <img src="" alt="">
+    </div>
+    <div class="options-div">
+        <ol class="options-list">
+            <li class="option">
+                <img src="" alt="">
+                <p class="option-parragraph"></p>
+                <i class="option-choose-icon"></i>
+            </li>
+            <li class="option">
+                <img src="" alt="">
+                <p class="option-parragraph"></p>
+                <i class="option-choose-icon"></i>
+            </li>
+        </ol>
+    </div>
+    <div class="separator"></div>
+    <div class="tags-div">
+        <h2 class="tags-title">TAGS</h2>
+        <ul class="tags-list">
+            <li class="tag">
+                <i class="option-choose-icon"></i>
+                <p class="tag-name"></p>
+            </li>
+        </ul>
+    </div>
+
+</div>
