fix size of main div and styles of anchor

--- a/src/pages/auth-page/login/login.html
+++ b/src/pages/auth-page/login/login.html
@@ -1,4 +1,4 @@
-<div class="login-div login">
+<div class="login-div container-background">
     <h1 class="title">Welcome to Note</h1>
     <p class="login-message">Please Log In to continue</p>
     <form action="">
@@ -9,7 +9,7 @@
         <div class="input-div">
             <label for="password">Password</label>
             <input type="text" name="password" id="password">
-            <a routerLink="/auth/forgot" class="forgot-password-anchor">Forgot</a>
+            <a routerLink="/auth/forgot-password" class="forgot-password-anchor">Forgot</a>
         </div>
         <input type="submit" value="Login" class="btn login-btn">
     </form>
