fix size of main div and styles of anchor

--- a/src/pages/auth-page/signup/signup.html
+++ b/src/pages/auth-page/signup/signup.html
@@ -4,7 +4,7 @@
     <form action="">
         <div class="input-div">
             <label for="email">Email Address</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" placeholder="example@email.com">
         </div>
         <div class="input-div">
             <label for="password">Password</label>
