--- a/src/pages/auth-page/auth-page.html
+++ b/src/pages/auth-page/auth-page.html
@@ -1,4 +1,4 @@
-<div class="container-div">
+<div class="container-div container-background">
     <div class="logo-div">
         <img src="assets/images/logo.svg" alt="logo" class="logo-img">
     </div>
